kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: basic-spring-boot-deployment
  namespace: cassio-basic-spring-boot
spec:
  selector:
    matchLabels:
      component: basic-spring-boot-pod
  replicas: 1
  template:
    metadata:
      labels:
        component: basic-spring-boot-pod
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
      containers:
        - name: basic-spring-boot-container
          image: cassionoronha/basicspringboot:0.2b
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 1
              memory: 600Mi
            requests:
              cpu: 500m
              memory: 300Mi
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 8081
          #   initialDelaySeconds: 60
          #   periodSeconds: 30
          #   timeoutSeconds: 120
          #   failureThreshold: 5
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 8081
          #   initialDelaySeconds: 60
          #   periodSeconds: 30
          #   timeoutSeconds: 120
          #   failureThreshold: 5
