kubernetes/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-spring-boot-cluster-ip-service
  namespace: demonstracao
spec:
  selector:
    component: basic-spring-boot-pod
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30007
  type: NodePort
