kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-spring-boot-service
  namespace: cassio-basic-spring-boot
spec:
  selector:
    component: basic-spring-boot-pod
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30007
  type: NodePort
